--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,9 +24,13 @@ dependencies:
   cloud_firestore: ^0.12.9
   toast: ^0.1.5
   flutter_signin_button: ^0.2.8
+  carousel_pro: ^0.0.13
+  intl: ^0.15.8
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  flutter_datetime_picker: 1.2.5
+  datetime_picker_formfield: ^0.4.2
 
 dev_dependencies:
   flutter_test:
@@ -46,6 +50,10 @@ flutter:
   assets:
     - assets/images/androidlogo.png
     - assets/images/background.jpg
+    - assets/images/hiphop.jpg
+    - assets/images/randb.png
+    - assets/images/urban.jpg
+    - assets/images/edm.jpg
 
   # To add assets to your application, add an assets section, like this:
   # assets:
