--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   flutter_datetime_picker: 1.2.5
   datetime_picker_formfield: ^0.4.2
+  url_launcher: ^5.1.2
 
 dev_dependencies:
   flutter_test:
@@ -59,6 +60,8 @@ flutter:
     - assets/images/baganover.jpg
     - assets/images/mdy.jpg
     - assets/images/yangon.jpg
+    - assets/images/lifestyle.png
+    - assets/images/sport.jpg
 
   # To add assets to your application, add an assets section, like this:
   # assets:
